--- a/src/components/Cart/styles.module.scss
+++ b/src/components/Cart/styles.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../styles/mixins';
 
 .overlayWrapper {
   position: fixed;
@@ -38,6 +39,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @include responsive('tablet') {
+    width: 100%;
+  }
 }
 
 .container {
@@ -58,12 +63,20 @@
   width: 42.5rem;
   top: 5.2rem;
   z-index: 10;
+
+  @include responsive('tablet') {
+    width: 100%;
+  }
 }
 
 .title {
   width: 80%;
   text-align: center;
   font-size: 24px;
+
+  @include responsive('tablet') {
+    font-size: 18px;
+  }
 }
 
 .closeButton {
@@ -87,12 +100,14 @@
   align-items: center;
   width: 42.5rem;
   padding: 1rem;
-  // background-color: $color-dark;
   background-color: transparent;
   position: fixed;
   bottom: 0;
   z-index: 10;
-  margin-bottom: 2rem;
+
+  @include responsive('tablet') {
+    width: 100%;
+  }
 }
 
 .countPrice {
@@ -100,6 +115,10 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+
+  span {
+    font-weight: 700;
+  }
 }
 
 .priceContent {
