--- a/src/components/Counter/styles.module.scss
+++ b/src/components/Counter/styles.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+@import '../../styles/mixins';
 
 .counterContainer {
   display: flex;
@@ -9,6 +10,10 @@
   padding: 10px;
   background-color: $color-dark;
   border-radius: 10px;
+
+  @include responsive('mobile') {
+    width: 80px;
+  }
 }
 
 .button {
