--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -8,9 +8,12 @@
   box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: $color-dark;
   color: $color-white;
 }
-
