--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,6 @@
-
-$color-primary: #FF8310;
+$color-primary: #ff8310;
 $color-dark: #232323;
-$color-dark-secondary: #191A20;
+$color-dark-secondary: #191a20;
 $color-gray-dark: #393939;
-$color-gray-light: #CCCCCC;
-$color-white: #FFFFFF;
+$color-gray-light: #cccccc;
+$color-white: #ffffff;
