--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,11 +1,9 @@
 @mixin responsive($breakpoint) {
-  @if $breakpoint =='tablet' {
+  @if $breakpoint == 'tablet' {
     @media (max-width: 768px) {
       @content;
     }
-  }
-
-  @else if $breakpoint =='mobile' {
+  } @else if $breakpoint == 'mobile' {
     @media (max-width: 480px) {
       @content;
     }
